--- a/index.html
+++ b/index.html
@@ -6,19 +6,17 @@
     <body>
         <h1 id="title">Titel veld</h1>
         <p id="statement">text bladiebla</p>
-        <input class="w3-button w3-green" type="button" value="Eens">
-        <input class="w3-button w3-teal" type="button" value="Geen mening">
-        <input class="w3-button w3-red" type="button" value="Oneens">
-        <button onclick="textChange()">Append</button>
-        <button onclick="editText()">Edit text</button>
+        <input onclick="editText()" class="w3-button w3-green" type="button" value="Eens">
+        <input onclick="editText()" class="w3-button w3-teal" type="button" value="Geen mening">
+        <input onclick="editText()" class="w3-button w3-red" type="button" value="Oneens">
         <div class="w3-dropdown-click">
             <button onclick="myFunction()" class="w3-button w3-black">Zou uw het standpunt van een partij willen weten?</button>
-            <div id="list" class="w3-dropdown-content w3-bar-block w3-card-4 w3-animate-zoom">
-            </div>
+            <div id="list" class="w3-dropdown-content w3-bar-block w3-card-4 w3-animate-zoom"></div>
         </div>
         <h1 id="party"></h1>
         <p id="specStatement"></p>
     </body>
+    <script rel="script" src="data.js" ></script>
     <script rel="script" src="script.js" defer></script>
 
 </html> 
